--- a/ConfigurationFiles/Configuration.ini
+++ b/ConfigurationFiles/Configuration.ini
@@ -3,4 +3,9 @@ name_server = ALERION
 time_sleep_after_sign_in_out_up = 2
 email = alerion@aragonphotonics.com
 password = en1Be_jei
+receiver = a.garcia@aragonphotonics.com
+manager_email = a.garcia@aragonphotonics.com
+path_logo_mensaje = assets\imgs\logo_aragon.jpg
+
+
 
