--- a/ConfigurationFiles/Configuration.ini
+++ b/ConfigurationFiles/Configuration.ini
@@ -1,6 +1,9 @@
 [system]
 name_server = ALERION
 time_sleep_after_sign_in_out_up = 2
+; 192.168.127.105
+ip_host = localhost
+port_host = 8050
 email = alerion@aragonphotonics.com
 password = en1Be_jei
 receiver = a.garcia@aragonphotonics.com
