Añadido la parte de recuperacion de la cuenta

--- a/ConfigurationFiles/Configuration.ini
+++ b/ConfigurationFiles/Configuration.ini
@@ -2,7 +2,7 @@
 name_server = ALERION
 time_sleep_after_sign_in_out_up = 2
 ; 192.168.127.105
-ip_host = localhost
+ip_host = 127.0.0.1
 port_host = 8050
 email = alerion@aragonphotonics.com
 password = en1Be_jei
